--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-    <a class="cta" href="https://simply-fit.netlify.com/"><button>Download</button></a>
+    <a href="https://simply-fit.netlify.com/"><button class="cta">Download</button></a>
   </header>
 
   <h1>Finally, an app that tracks your lifts fast.</h1>
